RESOLVED FIXED305982
webkitusertextinput doesn't get dispatched on iOS
https://bugs.webkit.org/show_bug.cgi?id=305982
Summary webkitusertextinput doesn't get dispatched on iOS
Ryosuke Niwa
Reported 2026-01-21 15:12:39 PST
webkitusertextinput we added in 303685@main doesn't fire in iOS. Make it work there.
Attachments
Ryosuke Niwa
Comment 1 2026-01-21 15:13:33 PST
Ryosuke Niwa
Comment 2 2026-01-21 15:39:30 PST
EWS
Comment 3 2026-01-21 22:00:11 PST
Committed 305992@main (5788c0b5720f): <https://commits.webkit.org/305992@main> Reviewed commits have been landed. Closing PR #57006 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.