webkitusertextinput doesn't get dispatched on iOS https://bugs.webkit.org/show_bug.cgi?id=305982

Reviewed by Wenson Hsieh.

The bug was caused by WebPage::insertTextAsync in iOS not instantiating UserTypingGestureIndicator.
Fixed the bug by instantiating one so that the event will be dispatched.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/UserContentController.mm
* Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::WebPage::insertTextAsync):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/UserContentController.mm:
(TEST(WKUserContentController, FireUserTextInputEvent)):

Canonical link: https://commits.webkit.org/305992@main